# meetnote

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PAID_IMPROVEMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  TEST_CHECKLIST.md  TEST_PROGRESS.md  install.sh  run-tests.sh  start.sh
.github/workflows/: docker-base.yml  docker.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.base  benchmark.py  benchmark_1hr.py  benchmark_mlx.py  config.yaml  config_env.py  docker-compose.yml  install-autostart.sh  install-local.sh  pyproject.toml  requirements.txt  server.py  start-local.sh  upgrade.sh
backend/recorder/: analytics.py  audio.py  crypto.py  diarizer.py  meeting_search.py  merger.py  slack_sender.py  speaker_db.py  summarizer.py  transcriber.py  transcript_corrector.py
backend/routers/: config.py  email.py  shared.py  speakers.py
backend/tests/: conftest.py  test_edge_cases.py  test_email.py  test_health.py  test_recordings.py  test_security.py  test_speakers.py  test_state_machine.py  test_transcriber_filter.py  test_websocket.py
backend/tools/: merge_speakers.py  migrate.sh  smoke-test.sh
backlog/: config.yml
backlog/completed/: rec-12 - Plugin-UX-개선-에러-메시지-온보딩-취소-기능.md  rec-15 - 아키텍처-리팩토링-DI-Protocol-세션-관리.md  rec-2 - Backend-포괄적-에러-핸들링-및-복원력-강화.md  rec-47 - 플러그인-설정-정비-—-기본-고급-분리-검증-필수-표시.md  rec-48 - 처리-완료-시-문서-자동-열기-알림-개선.md  rec-49 - 사이드패널-접기-펼치기-섹션-구조.md  rec-51 - 처리-파이프라인-실제-진행률-표시.md  rec-52 - 실시간-전사-잔재-정리-큐-모드.md  rec-53 - Speaker-DB-자동-백업.md  rec-54 - 시각적-사용자-매뉴얼-및-가이드-영상-제작.md
backlog/drafts/: draft-1 - Phase-2-sherpa-onnx-독립-플러그인-전환.md
backlog/milestones/: m-0 - mvp---meeting-recorder.md  m-1 - faang-quality---phase-1-critical-foundation.md  m-2 - faang-quality---phase-2-observability-&-quality.md  m-3 - faang-quality---phase-3-robustness.md  m-4 - faang-quality---phase-4-production-readiness.md  m-5 - 배포-개선-(deploy-improvement).md
backlog/tasks/: rec-1 - Meeting-Recorder-옵시디안-플러그인-Python-백엔드.md  rec-1.1 - 프로젝트-초기-설정-plugin-backend-구조.md  rec-1.2 - Python-백엔드-—-오디오-녹음-모듈-audio.py.md  rec-1.3 - Python-백엔드-—-STT-전사-모듈-transcriber.py.md  rec-1.4 - Python-백엔드-—-화자구분-모듈-diarizer.py.md  rec-1.5 - Python-백엔드-—-전사화자-병합-모듈-merger.py.md  rec-1.6 - Python-백엔드-—-FastAPI-WebSocket-서버-server.py.md  rec-1.7 - Obsidian-플러그인-—-기본-스캐폴딩-및-설정-화면.md  rec-1.8 - Obsidian-플러그인-—-백엔드-통신-클라이언트-backend-client.ts.md  rec-11 - 성능-프로파일링-및-벤치마크-구축.md  (+63 more)
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  INTERNAL_SETUP.md  OPERATIONS.md  SETUP.md  TROUBLESHOOTING.md  USER_GUIDE.md
plugin/: main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
(+43 files in other folders)
